@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-28T01:00:17Z",
-  "count" : 4,
+  "timestamp" : "2023-10-11T08:18:03Z",
+  "count" : 2,
   "count_minmax" : [ 2, 4 ],
-  "count_decinc" : [ -0, +4 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "count_decinc" : [ -2, +4 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
