@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-10-11T01:00:24Z",
+  "timestamp" : "2023-10-11T08:18:03Z",
   "count_outdated" : 879,
   "uniques_outdated" : 517,
-  "count" : 915,
-  "uniques" : 540,
+  "count" : 917,
+  "uniques" : 542,
   "clones" : [
     {
       "timestamp": "2023-09-27T00:00:00Z",
-      "count": 4,
+      "count": 2,
       "count_minmax": [ 2, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count_decinc": [ 2, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-09-28T00:00:00Z",
@@ -118,6 +118,15 @@
       "count": 3,
       "count_minmax": [ 2, 3 ],
       "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-10-11T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
