@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2023-09-27T00:00:00Z",
-      "count": 4,
-      "uniques": 2
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2023-09-28T00:00:00Z",
@@ -65,6 +65,11 @@
     {
       "timestamp": "2023-10-10T00:00:00Z",
       "count": 3,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2023-10-11T00:00:00Z",
+      "count": 2,
       "uniques": 2
     }
   ]
